# ellma

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.txt  index.html  install.sh  pyproject.toml  requirements-audio.txt  requirements.txt  setup.py  setup_secure_env.py  src.txt  stt.py
TODO/: error_logger.py  refactoring_plan.md
docs/: Makefile  README.md  architecture.md  generated_utilities.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/commands/: base.rst  files.rst  system.rst  web.rst
docs/source/modules/: commands.rst  core.rst  utils.rst
docs/source/utils/: config.rst  logger.rst
ellma/: __init__.py  constants.py  secure_executor.py  secure_shell.py
ellma/cli/: __init__.py  main.py
ellma/commands/: __init__.py  audio.py  base.py  files.py  introspection.py  system.py  web.py
ellma/commands/files/: __init__.py  base_operations.py  file_ops.py  read_write.py  search_ops.py
ellma/commands/system/commands/: __init__.py  cleanup.py  config.py  health.py  ports.py  processes.py  scan.py  services.py
ellma/commands/system/core/: __init__.py
ellma/commands/system/models/: __init__.py
ellma/commands/system/utils/: __init__.py
ellma/core/: __init__.py  agent.py  decorators.py  error_logger.py  evolution.py  modular.py  module_generator.py  security.py  shell.py
ellma/core/evolution/: __init__.py  config.py  crossover.py  engine.py  exceptions.py  fitness.py  mutation.py  population.py  selection.py  utils.py
ellma/generators/: __init__.py  bash.py  docker.py  groovy.py  python.py
ellma/modules/: __init__.py  generated_utils.py  loader.py  registry.py  stt.py  tts.py
ellma/security/: __init__.py  __main__.py  cli.py  core.py  validation.py  validations.py
ellma/utils/: __init__.py  config.py  error_logger.py  evolution_utils.py  helpers.py  logger.py  system.py
ellma/utils/helpers/: __init__.py  concurrency.py  data_utils.py  decorators.py  file_utils.py  network_utils.py  time_utils.py  validation.py
examples/: using_generated_utils.py
examples/generated_utils/: README.md  cache_example.py  combined_example.py  error_handling_example.py  parallel_processing_example.py
modules/: README.md
modules/example_module/: Dockerfile  README.md  main.py  pyproject.toml  test.py
scripts/: add_dependency_checking.py  bootstrap.py  check_dependencies.py  check_security.py  install.sh
tests/: conftest.py  mock_audioop.py  test_commands.py  test_core.py  test_evolution.py  test_generated_utils.py  test_module_generator.py
tests/core/: test_shell.py
tests/core/evolution/: test_config.py
tests/modules/: test_stt.py
tests/security/: test_validation.py  test_validations.py
