[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "example-module"
version = "0.1.0"
description = "Example module for ELLMa"
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "mypy"
]
